fix banner tablet spacing

--- a/css/index.css
+++ b/css/index.css
@@ -197,8 +197,8 @@ html{
     .recr-subdiv p {
         /* text-align: left; */
         margin: 10px 0;
-        min-width: 40%;
-        max-width: 40%;
+        min-width: 550px;
+        width: 70%;
         font-size: 18px;
         color: rgb(170, 170, 170);
     }
